{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 355,
  "lineage": "0245e15d-6733-d1b6-4991-62b09f8598eb",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:security-group/sg-0129c95940b18daea",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0129c95940b18daea",
            "ingress": [],
            "name": "triton-inference-cluster-cluster-2026012818232580970000000f",
            "name_prefix": "triton-inference-cluster-cluster-",
            "owner_id": "676187242411",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "triton-inference-cluster-cluster"
            },
            "tags_all": {
              "Name": "triton-inference-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:security-group/sg-0bba3be33980a5ab9",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0bba3be33980a5ab9",
            "ingress": [],
            "name": "triton-inference-cluster-node-2026012818232580920000000e",
            "name_prefix": "triton-inference-cluster-node-",
            "owner_id": "676187242411",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "triton-inference-cluster-node",
              "kubernetes.io/cluster/triton-inference-cluster": "owned"
            },
            "tags_all": {
              "Name": "triton-inference-cluster-node",
              "kubernetes.io/cluster/triton-inference-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2283309205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0129c95940b18daea",
            "security_group_rule_id": "sgr-0f534dc0b7363a4f1",
            "self": false,
            "source_security_group_id": "sg-0bba3be33980a5ab9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4292069141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0ec2cbc2a8df5c68f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3692722895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-07756bfb4e6b077d5",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3352799858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-08cb3a6c325f8234b",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-244698596",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0a8b0f58897933ecb",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-499773893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-09a06deb1c5145745",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2036908558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0be89ab3aa2700934",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2869519376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0573a37062e56d5bb",
            "self": false,
            "source_security_group_id": "sg-0129c95940b18daea",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3094811182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0f93d522f61d18b38",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3322507490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-0f5fac70379a796c7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1649857293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bba3be33980a5ab9",
            "security_group_rule_id": "sgr-03a2a9613654088a4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:network-acl/acl-020052f171b936ba7",
            "default_network_acl_id": "acl-020052f171b936ba7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-020052f171b936ba7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "676187242411",
            "subnet_ids": [
              "subnet-00f61a748b32b1850",
              "subnet-0368e241d5422896b",
              "subnet-043fe2c185c3e23a0",
              "subnet-0d37941557611990e"
            ],
            "tags": {
              "Name": "ai-triton-vpc-default"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-default"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:route-table/rtb-0a630999ae3a7d163",
            "default_route_table_id": "rtb-0a630999ae3a7d163",
            "id": "rtb-0a630999ae3a7d163",
            "owner_id": "676187242411",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "ai-triton-vpc-default"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:security-group/sg-086058c90d9b025ce",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-086058c90d9b025ce",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "676187242411",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ai-triton-vpc-default"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-default"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:internet-gateway/igw-0cf8b1fc273173fec",
            "id": "igw-0cf8b1fc273173fec",
            "owner_id": "676187242411",
            "tags": {
              "Name": "ai-triton-vpc"
            },
            "tags_all": {
              "Name": "ai-triton-vpc"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf8b1fc273173fec",
            "id": "r-rtb-0febd9d1bc3babe0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0febd9d1bc3babe0d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:route-table/rtb-01842f1f1d486c3b3",
            "id": "rtb-01842f1f1d486c3b3",
            "owner_id": "676187242411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:route-table/rtb-0dfb81d78055402b2",
            "id": "rtb-0dfb81d78055402b2",
            "owner_id": "676187242411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:route-table/rtb-05a2a1cec933c3d35",
            "id": "rtb-05a2a1cec933c3d35",
            "owner_id": "676187242411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:route-table/rtb-0febd9d1bc3babe0d",
            "id": "rtb-0febd9d1bc3babe0d",
            "owner_id": "676187242411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ai-triton-vpc-public"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797d915af0312f70",
            "route_table_id": "rtb-01842f1f1d486c3b3",
            "subnet_id": "subnet-03d7e8b0559d65e05"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8fd36701e2df018",
            "route_table_id": "rtb-0dfb81d78055402b2",
            "subnet_id": "subnet-00f61a748b32b1850"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a37f008262c54fc",
            "route_table_id": "rtb-05a2a1cec933c3d35",
            "subnet_id": "subnet-043fe2c185c3e23a0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01724b148bfa8428a",
            "route_table_id": "rtb-0febd9d1bc3babe0d",
            "subnet_id": "subnet-04d2d6328dd2de749"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d6c8ba8fd8b5f9",
            "route_table_id": "rtb-0febd9d1bc3babe0d",
            "subnet_id": "subnet-0d37941557611990e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b365cd5023a699e4",
            "route_table_id": "rtb-0febd9d1bc3babe0d",
            "subnet_id": "subnet-0368e241d5422896b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-03d7e8b0559d65e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d7e8b0559d65e05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-00f61a748b32b1850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f61a748b32b1850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-043fe2c185c3e23a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043fe2c185c3e23a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-04d2d6328dd2de749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2d6328dd2de749",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-0d37941557611990e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37941557611990e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:subnet/subnet-0368e241d5422896b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0368e241d5422896b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676187242411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-triton-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "ai-triton-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0daaa2d7fa9a6e4e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676187242411:vpc/vpc-0daaa2d7fa9a6e4e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020052f171b936ba7",
            "default_route_table_id": "rtb-0a630999ae3a7d163",
            "default_security_group_id": "sg-086058c90d9b025ce",
            "dhcp_options_id": "dopt-31fbe153",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daaa2d7fa9a6e4e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a630999ae3a7d163",
            "owner_id": "676187242411",
            "tags": {
              "Name": "ai-triton-vpc"
            },
            "tags_all": {
              "Name": "ai-triton-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}